working with images was fun

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <!-- Your code here -->
+     <img 
+     src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+     <img 
+     src="https://imgs.search.brave.com/qvZYN_xCd9UWTI7fsY2Fso6PL-laVnBuPAEWvnmpCK4/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvNDU4/MDk1ODQ3L3Bob3Rv/L2tmYy5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9d1IwUDRr/TUNZeFRoWXRyd0J2/ZHlHSnJxVHMtMld3/U1JQNmp6TWxYVEhS/az0"
+     alt="KFC bucket of chicken">
+     <img
+     src="https://imgs.search.brave.com/urwBevUJMHeFcYifF2rbg5NPQvJFGXKEnlDXUhW2Ev8/rs:fit:500:0:0/g:ce/aHR0cHM6Ly93d3cu/ZGV4ZXJ0by5jb20v/Y2RuLWNnaS9pbWFn/ZS93aWR0aD0zODQw/LHF1YWxpdHk9NzUs/Zm9ybWF0PWF1dG8v/aHR0cHM6Ly9lZGl0/b3JzLmRleGVydG8u/Y29tL3dwLWNvbnRl/bnQvdXBsb2Fkcy8y/MDIxLzA0LzE5L2Vk/cDQ0NS1waGlsbHkt/c2NhbGVkLmpwZw"
+     alt="EDP445"
+     title="Very Bad Man!">
   </body>
 </html>
